# sudoku

./: .gitignore  AUTHORS  README  TODO  configure.ac  configure.in
examples/: hard-2013-07-15.sudoku  hard-2013-07-25.sudoku  metro-2012-06-01.sudoku  metro-2012-06-04.sudoku  metro-2012-06-08.sudoku  metro-2012-06-15.sudoku  metro-2012-06-18.sudoku  metro-2012-06-20.sudoku  metro-2012-06-27.sudoku  metro-2012-06-29.sudoku  metro-2012-07-13.sudoku  metro-2012-08-03.sudoku  metro-2012-08-10.sudoku  metro-2012-08-24.sudoku  metro-2012-08-31.sudoku  metro-2012-09-03.sudoku  metro-2012-09-19.sudoku  metro-2012-09-21.sudoku  metro-2012-09-28.sudoku  metro-2013-03-11.sudoku  metro-2013-03-18.sudoku  metro-2013-03-20.sudoku  metro-2013-04-17.sudoku  metro-2013-04-19.sudoku  metro-2013-04-29.sudoku  random-2013-03-19.sudoku  star-burst-leo.sudoku  sunday-2012-08-12.sudoku
src/: Makefile.am  cell.cc  cell.h  icon.rc  main.cc  mainwindow.cc  mainwindow.h  settings.cc  settings.h  solverwindow.cc  solverwindow.h  sudoku.cc  sudoku.h  sudokuwidget.cc  sudokuwidget.h
